pxc/tests/test_19_thread/thrtest3.px

namespace ttest;
import thread "";
import io;

struct my_thread_obj {
  int x;
  int y;
  io::ioref io;
  function void main() {
    io.println("my thread main");
    io.println(x);
  }
}

thread_t thr = create_thread(my_thread_obj(123, 456, io::main));
  // error: my_thread_obj is not threaded
thr.join();

